--- a/workers/esm_service/Dockerfile
+++ b/workers/esm_service/Dockerfile
@@ -1,5 +1,8 @@
-FROM python:3.11-slim
+FROM nvidia/cuda:12.1-runtime-ubuntu22.04
+ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /app
-COPY app.py .
-RUN pip install fastapi uvicorn sentence-transformers torch
+RUN apt-get update && apt-get install -y python3-pip git && rm -rf /var/lib/apt/lists/*
+RUN pip install --upgrade pip
+RUN pip install fastapi uvicorn sentence-transformers torch --extra-index-url https://download.pytorch.org/whl/cu121
+COPY app.py /app/app.py
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8101"]
