--- a/workers/openfold_service/Dockerfile
+++ b/workers/openfold_service/Dockerfile
@@ -1,6 +1,8 @@
-# This is a lightweight stub. Replace with full OpenFold/AlphaFold container for real workloads.
-FROM python:3.11-slim
+FROM nvidia/cuda:12.1-runtime-ubuntu22.04
+ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /app
-COPY app.py .
+RUN apt-get update && apt-get install -y python3-pip git ffmpeg && rm -rf /var/lib/apt/lists/*
+RUN pip install --upgrade pip
 RUN pip install fastapi uvicorn pydantic
+COPY app.py /app/app.py
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8102"]
