--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,4 @@
-HF_TOKEN=
+HF_TOKEN=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
 POSTGRES_PASSWORD=biomedpass
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
